nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - image: quay.io/sclorg/nginx-120-c8s
        name: nginx
        ports:
        - containerPort: 8080
          name: http-server
