nginx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  path: "/"
  to:
    kind: Service
    name: nginx
